	- Prevent package names like 'x' from being parsed as operators
	  (GitHub #75) (MOREGAN)
	- Prevent package names like 'v10' from being parsed as version
	  strings (GitHub #76) (MOREGAN)
	- Prevent sub names like 'v10' from being parsed as version
	  strings (RT #74527, GitHub #65) (JAE, MOREGAN)
	- Prevent 'use' and 'no' package names from being parsed as
	  operators (MOREGAN)

1.220 Tue 11 Nov 2014
	Summary:
	- incompatible behavior fixes on PPI::Statement::Sub->prototype
	- improved parsing of various syntax elements
	- code quality improvements
	- various small documentation fixes

	Details:
	- {} is now recognized as anonymous hash constructor instead of a code
	  block after these operators: &&= //= || && // ? :
	  (GitHub #36) (MOREGAN)
	- regex capture variables greater than $9 are now parsed completely,
	  instead of being parsed as single digit captures with numbers after
	  them (GitHub #38) (MOREGAN)
	- DESTROY and AUTOLOAD subs are now parsed even without the sub
	  keyword (GitHub #39) (MOREGAN)
	- PPI::Statement::Sub->prototype behavior now matches its
	  documentation, instead of returning the prototype string
	  unchanged and still including the parens (GitHub #56) (MOREGAN)
	- PPI::Statement::Sub->prototype now returns undef on subs without a
	  prototype, instead of returning an empty string
	  (GitHub #56) (MOREGAN)
	- list of keywords which are not parsed as packages when followed by
	  the Perl4 package separator ' has been increased
	  (GitHub #77) (MOREGAN)
	- application of a number of Perl::Critic policies and documentation
	  fixes (GitHub #53) (MOREGAN, MITHALDU)
	- automation of README.md generation for git (GitHub #86) (COWENS)
	- various small documentation fixes (Github #96) (MOREGAN)

1.218 Sat 16 Aug 2014
	Summary:
	- Fixes for various parsing and documentation bugs
	- 1MB limit on input document size removed
	- Moved repository to GitHub: https://github.com/adamkennedy/PPI

	Details: