@@ -15,6 +15,8 @@ Revision history for Perl extension PPI
 	  strings (RT #74527, GitHub #65) (JAE, MOREGAN)
 	- Prevent 'use' and 'no' package names from being parsed as
 	  operators (MOREGAN)
+	- Prevent left side of fat comma from parsing as operator
+	  operators (MOREGAN)
 
 1.220 Tue 11 Nov 2014
 	Summary:
